--- a/VAR_DT_M_02/vars/index.html
+++ b/VAR_DT_M_02/vars/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VARS</title>
+    <title>vars</title>
 </head>
 <body>
-    <h1>vars</h1>
-    <script src="/VAR_DT_M_02/console/script.js"></script>
+    <h1>hello</h1>
+    <h1>world</h1>
+    <script src="/VAR_DT_M_02/vars/script.js"></script>
 </body>
 </html>
