--- a/VAR_DT_M_02/console/index.html
+++ b/VAR_DT_M_02/console/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VARS</title>
+    <title>console</title>
 </head>
 <body>
-    <h1>vars</h1>
+    <h1>console</h1>
     <script src="/VAR_DT_M_02/console/script.js"></script>
 </body>
 </html>
